[tool.poetry]
name = "test-tg-bot"
version = "0.1.0"
description = ""
authors = ["nnikitenko <nnikitenko@aorti.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.32.3"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
